--- a/app/src/main/res/layout/item_home_two_below.xml
+++ b/app/src/main/res/layout/item_home_two_below.xml
@@ -2,27 +2,56 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_margin="@dimen/dp_10"
-
     android:gravity="center_vertical"
     android:orientation="horizontal">
 
     <ImageView
+        android:id="@+id/iv_1"
+        android:layout_width="@dimen/dimen_30dp"
+        android:adjustViewBounds="true"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="@dimen/dp_10"
+        android:src="@drawable/icon_home_two_1"
+        android:visibility="visible" />
+
+    <TextView
+        android:id="@+id/tv"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="@dimen/dp_10"
-        android:src="@drawable/icon_home_two_1" />
+        android:text="No.4"
+        android:textColor="@color/color_000000"
+        android:textSize="14sp"
+        android:visibility="gone" />
 
-    <TextView
+    <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="@dimen/dimen_15dp"
-        android:drawableStart="@drawable/icon_two"
-        android:drawablePadding="@dimen/dimen_5dp"
-        android:gravity="center"
-        android:text="吴帅帅W"
-        android:textColor="@color/color_333333"
-        android:textSize="13sp" />
+        android:layout_marginStart="@dimen/dp_10"
+        android:gravity="center">
+
+        <com.jxkj.fit_5a.conpoment.view.RoundImageView
+            android:id="@+id/iv_2"
+            android:layout_width="23dp"
+            android:layout_height="23dp"
+            app:type="circle"
+            android:src="@drawable/icon_two" />
+
+        <TextView
+            android:id="@+id/tv_1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="@dimen/dimen_5dp"
+            android:drawablePadding="@dimen/dimen_5dp"
+            android:gravity="center"
+            android:text="吴帅帅W"
+            android:textColor="@color/color_333333"
+            android:textSize="13sp" />
+
+    </LinearLayout>
+
 
     <LinearLayout
         android:layout_width="0dp"
@@ -31,6 +60,7 @@
         android:gravity="center">
 
         <TextView
+            android:id="@+id/tv_2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="@dimen/dp_10"
@@ -44,16 +74,29 @@
     </LinearLayout>
 
 
-    <TextView
+    <LinearLayout
+        android:id="@+id/ll_dianzan"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="@dimen/dp_10"
-        android:layout_marginEnd="@dimen/dp_10"
-        android:drawableStart="@drawable/icon_zan_yes"
-        android:drawablePadding="@dimen/dimen_5dp"
-        android:gravity="center"
-        android:text="264"
-        android:textColor="@color/color_333333"
-        android:textSize="13sp" />
+        android:gravity="center">
+
+        <ImageView
+            android:id="@+id/iv_3"
+            android:layout_width="14dp"
+            android:layout_height="14dp"
+            android:src="@drawable/icon_zan_yes" />
+
+        <TextView
+            android:id="@+id/tv_3"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="@dimen/dimen_5dp"
+            android:layout_marginEnd="@dimen/dp_10"
+            android:gravity="center"
+            android:text="264"
+            android:textColor="@color/color_333333"
+            android:textSize="13sp" />
+    </LinearLayout>
 
 </LinearLayout>
