--- a/app/src/main/res/layout/item_home_three_rmht.xml
+++ b/app/src/main/res/layout/item_home_three_rmht.xml
@@ -8,6 +8,7 @@
     android:orientation="horizontal">
 
     <ImageView
+        android:id="@+id/iv"
         android:layout_width="@dimen/dp_40"
         android:layout_height="@dimen/dp_40"
         android:layout_marginStart="@dimen/dp_10"
@@ -23,6 +24,7 @@
         android:orientation="vertical">
 
         <TextView
+            android:id="@+id/tv_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="@dimen/dp_10"
@@ -33,6 +35,7 @@
             android:textSize="14sp" />
 
         <TextView
+            android:id="@+id/tv_state"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="@dimen/dp_10"
