--- a/app/src/main/res/layout/item_topic_all.xml
+++ b/app/src/main/res/layout/item_topic_all.xml
@@ -20,7 +20,7 @@
 
     <TextView
         android:id="@+id/tv2"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@id/tv1"
         android:layout_marginTop="@dimen/dp_10"
