--- a/app/src/main/res/layout/dialog_comment_package_layout.xml
+++ b/app/src/main/res/layout/dialog_comment_package_layout.xml
@@ -1,39 +1,64 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@drawable/shape_bj_back"
     android:orientation="vertical">
 
-
-    <TextView
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:gravity="center"
-        android:padding="@dimen/dp_10"
-        android:text="0条评论"
-        android:textColor="@color/color_333333"
-        android:textSize="@dimen/dimen_16dp" />
+        android:layout_above="@id/ll"
+        android:background="@drawable/shape_bj_back"
+        android:orientation="vertical">
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/rv_list"
-        android:layout_width="match_parent"
-        android:layout_height="450dp"
-        android:overScrollMode="never" />
+        <TextView
+            android:id="@+id/tv_zs"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:padding="@dimen/dp_10"
+            android:text="共1.9w条评论"
+            android:textColor="@color/color_333333"
+            android:textSize="@dimen/dimen_16dp" />
 
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:background="@color/line_color" />
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/rv_list"
+            android:layout_width="match_parent"
+            android:layout_height="450dp"
+            android:overScrollMode="never" />
 
-    <EditText
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@id/ll"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@null"
-        android:hint="留下你的精彩评论吧"
-        android:padding="@dimen/dimen_15dp"
-        android:textColor="@color/color_333333"
-        android:textColorHint="@color/color_999999"
-        android:textSize="@dimen/sp_14" />
+        android:layout_alignParentBottom="true"
+        android:background="@color/color_ffffff"
+        android:paddingStart="@dimen/dp_10">
 
-</LinearLayout>
+        <EditText
+            android:id="@+id/et_content"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_margin="@dimen/dimen_7dp"
+            android:layout_weight="1"
+            android:background="@drawable/shap_f5f5f5_5"
+            android:hint="说点什么..."
+            android:padding="@dimen/dp_10"
+            android:textColor="@color/color_333333"
+            android:textColorHint="@color/color_999999"
+            android:textSize="@dimen/sp_14" />
+
+        <TextView
+            android:id="@+id/tv_fs"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="bottom"
+            android:padding="@dimen/dimen_15dp"
+            android:text="发送"
+            android:textColor="@color/color_999999"
+            android:textSize="15sp" />
+
+    </LinearLayout>
+</RelativeLayout>
