--- a/app/src/main/res/layout/item_mine_comment.xml
+++ b/app/src/main/res/layout/item_mine_comment.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical">
@@ -10,12 +11,13 @@
         android:layout_height="wrap_content"
         android:layout_margin="@dimen/dp_10">
 
-        <ImageView
+        <com.jxkj.fit_5a.conpoment.view.RoundImageView
             android:id="@+id/iv_head_1"
             android:layout_width="30dp"
             android:layout_height="30dp"
             android:layout_marginEnd="@dimen/dimen_15dp"
-            android:src="@mipmap/ic_6" />
+            android:src="@mipmap/ic_6"
+            app:type="circle" />
 
         <TextView
             android:id="@+id/tv_name_1"
@@ -24,7 +26,7 @@
             android:layout_marginTop="@dimen/dimen_5dp"
             android:layout_toEndOf="@id/iv_head_1"
             android:text="吴帅帅"
-            android:textColor="@color/color_333333"
+            android:textColor="#AAAAAA"
             android:textSize="@dimen/sp_14" />
 
         <TextView
@@ -33,88 +35,71 @@
             android:layout_height="wrap_content"
             android:layout_below="@id/tv_name_1"
             android:layout_marginTop="@dimen/dimen_5dp"
+            android:layout_toStartOf="@id/ll_xh"
             android:layout_toEndOf="@id/iv_head_1"
-            android:text="工作内容工作内容工作内容工作内容"
-            android:textColor="@color/color_999999"
-            android:textSize="12sp" />
+            android:text="工作内容工作内容工作内容工作内容工作内容工作内容工作内容工作内容"
+            android:textColor="@color/color_333333"
+            android:textSize="14sp" />
 
-        <RelativeLayout
-            android:id="@+id/rl_pl_11"
+
+        <LinearLayout
+            android:id="@+id/ll_xh"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@id/tv_pl_content_1"
-            android:layout_marginTop="@dimen/dp_10"
-            android:layout_toEndOf="@id/iv_head_1">
+            android:layout_alignParentEnd="true"
+            android:gravity="center"
+            android:orientation="vertical"
+            android:padding="@dimen/dp_10">
 
             <ImageView
-                android:id="@+id/iv_head_11"
-                android:layout_width="@dimen/dimen_25dp"
-                android:layout_height="@dimen/dimen_25dp"
-                android:layout_marginEnd="@dimen/dimen_15dp"
-                android:src="@mipmap/ic_6" />
-
-            <TextView
-                android:id="@+id/tv_name_11"
+                android:id="@+id/iv_xh"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/dimen_5dp"
-                android:layout_toEndOf="@id/iv_head_11"
-                android:text="吴帅帅"
+                android:scaleType="center"
+                android:src="@drawable/ic_celect_xh_yes"
+                android:text="6"
                 android:textColor="@color/color_333333"
                 android:textSize="12sp" />
 
             <TextView
-                android:id="@+id/tv_pl_content_11"
+                android:id="@+id/tv_xh_s"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_below="@id/tv_name_11"
-                android:layout_marginTop="@dimen/dimen_5dp"
-                android:layout_toEndOf="@id/iv_head_11"
-                android:text="工作内容工作内容工作内容工作内容"
-                android:textColor="@color/color_999999"
-                android:textSize="10sp" />
-        </RelativeLayout>
+                android:layout_below="@id/iv_xh"
+                android:text="6"
+                android:textColor="@color/color_666666"
+                android:textSize="11sp" />
 
-        <View
-            android:id="@+id/view1"
-            android:layout_width="@dimen/dimen_70dp"
-            android:layout_height="1dp"
-            android:layout_alignBottom="@id/tv_pl_num_1"
-            android:layout_marginEnd="@dimen/dp_10"
+        </LinearLayout>
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/rv_list"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/tv_pl_content_1"
+            android:layout_marginTop="@dimen/dp_10"
             android:layout_toEndOf="@id/iv_head_1"
-            android:background="@color/line_color" />
+            android:overScrollMode="never" />
 
         <TextView
-            android:id="@+id/tv_pl_num_1"
+            android:id="@+id/tv_num"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@id/rl_pl_11"
-            android:layout_marginTop="@dimen/dimen_5dp"
-            android:layout_toEndOf="@id/view1"
-            android:text="评论(16)"
-            android:textColor="@color/color_666666"
-            android:textSize="10sp" />
-
-        <TextView
-            android:id="@+id/tv_xh_s"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_toStartOf="@id/iv_xh"
-            android:text="6"
-            android:textColor="@color/color_333333"
-            android:textSize="12sp" />
-
-        <ImageView
-            android:id="@+id/iv_xh"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentEnd="true"
-            android:layout_margin="@dimen/dimen_5dp"
-            android:scaleType="center"
-            android:src="@drawable/ic_select_xi_yes"
-            android:text="6"
-            android:textColor="@color/color_333333"
-            android:textSize="12sp" />
-
+            android:layout_below="@id/rv_list"
+            android:layout_marginVertical="8dp"
+            android:layout_toEndOf="@id/iv_head_1"
+            android:text="展开 5 条回复"
+            android:visibility="gone"
+            android:textColor="#FFDC12"
+            android:textSize="@dimen/sp_14" />
     </RelativeLayout>
+
+
+    <View
+        android:id="@+id/view1"
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:layout_marginStart="@dimen/dp_40"
+        android:layout_marginEnd="@dimen/dp_10"
+        android:background="@color/line_color" />
 </LinearLayout>
