--- a/app/src/main/res/layout/activity_topic_all.xml
+++ b/app/src/main/res/layout/activity_topic_all.xml
@@ -5,11 +5,14 @@
     android:background="@color/color_ffffff"
     android:orientation="vertical">
 
+    <include layout="@layout/include_titlebar_common" />
+
     <LinearLayout
         android:id="@+id/rl_actionbar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:padding="@dimen/dp_10">
+        android:padding="@dimen/dp_10"
+        android:visibility="gone">
 
         <ImageView
             android:id="@+id/iv_back"
@@ -44,96 +47,26 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="match_parent"
+        android:orientation="horizontal">
 
-        <RelativeLayout
-            android:id="@+id/rl1"
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/rv_list_t"
+            android:layout_width="@dimen/dimen_100dp"
+            android:layout_height="match_parent"
+            android:background="@color/color_f5f5f5"
+            android:overScrollMode="never" />
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/rv_list"
             android:layout_width="0dp"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:layout_weight="1"
-            android:gravity="center"
-            android:padding="@dimen/dp_10">
-
-            <TextView
-                android:id="@+id/tv1"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="全部"
-                android:textColor="@color/black"
-                android:textSize="18sp"
-                android:textStyle="bold" />
-
-            <View
-                android:id="@+id/view1"
-                android:layout_width="@dimen/dp_40"
-                android:layout_height="@dimen/dimen_2dp"
-                android:layout_below="@id/tv1"
-                android:layout_marginTop="-5dp"
-                android:background="@drawable/line_shape_bj_select" />
-
-        </RelativeLayout>
-
-        <RelativeLayout
-            android:id="@+id/rl2"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:gravity="center"
-            android:padding="@dimen/dp_10">
-
-            <TextView
-                android:id="@+id/tv2"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="热门"
-                android:textColor="@color/color_666666"
-                android:textSize="18sp" />
-
-            <View
-                android:id="@+id/view2"
-                android:layout_width="@dimen/dp_40"
-                android:layout_height="@dimen/dimen_2dp"
-                android:layout_below="@id/tv2"
-                android:layout_marginTop="-5dp"
-                android:background="@drawable/line_shape_bj_select"
-                android:visibility="invisible" />
-
-        </RelativeLayout>
-
-        <RelativeLayout
-            android:id="@+id/rl3"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:gravity="center"
-            android:padding="@dimen/dp_10">
-
-            <TextView
-                android:id="@+id/tv3"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="参与"
-                android:textColor="@color/color_666666"
-                android:textSize="18sp" />
-
-            <View
-                android:id="@+id/view3"
-                android:layout_width="@dimen/dp_40"
-                android:layout_height="@dimen/dimen_2dp"
-                android:layout_below="@id/tv3"
-                android:layout_marginTop="-5dp"
-                android:background="@drawable/line_shape_bj_select"
-                android:visibility="invisible" />
-
-        </RelativeLayout>
+            android:background="@color/color_ffffff"
+            android:overScrollMode="never" />
 
     </LinearLayout>
-
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/rv_list"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:overScrollMode="never" />
 
 
 </LinearLayout>
