--- a/app/src/main/res/layout/item_topic_list.xml
+++ b/app/src/main/res/layout/item_topic_list.xml
@@ -1,23 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@color/color_ffffff"
+    android:background="@color/color_f5f5f5"
     android:orientation="vertical">
 
     <TextView
-        android:id="@+id/tv_title"
+        android:id="@+id/tv1"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:drawablePadding="@dimen/dimen_5dp"
         android:gravity="center"
-        android:padding="10dp"
-        android:text="相 册"
+        android:paddingVertical="@dimen/dp_10"
+        android:text="标题"
         android:textColor="@color/color_text_theme"
-        android:textSize="16sp" />
+        android:textSize="14sp" />
 
-    <View
-        android:layout_width="wrap_content"
-        android:layout_height="0.8dp"
-        android:background="@color/line_color" />
 
-</LinearLayout>
+</RelativeLayout>
+
